[gd_scene load_steps=15 format=3 uid="uid://c7l1wl8jooqcu"]

[ext_resource type="Script" path="res://plugins/boards/test/board.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://wtj7iedl45l7" path="res://common/scenes/board_logic/player_board/player_board.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dcyoe2uryyyef" path="res://common/scenes/board_logic/controller/controller.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dw3dff20fschf" path="res://common/scenes/board_logic/node/node.tscn" id="4"]
[ext_resource type="ArrayMesh" uid="uid://bx30md2fu71s1" path="res://assets/models/bridge/bridge_mesh.obj" id="5"]
[ext_resource type="Texture2D" uid="uid://dalbc0pyc1yhf" path="res://assets/models/bridge/bridge_diffuse.png" id="6_qfq2n"]
[ext_resource type="Material" uid="uid://byv360y45sm7g" path="res://assets/materials/water_still.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://bit17c4rxxhn6" path="res://plugins/boards/test/islands/island1.dae" id="8"]
[ext_resource type="PackedScene" uid="uid://dw0i25350pfh2" path="res://plugins/boards/test/islands/island2.dae" id="9"]
[ext_resource type="AudioStream" uid="uid://0efsuq0vlgsi" path="res://assets/music/boards/test board bgm.wav" id="10"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hjf3u"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("6_qfq2n")
metallic_specular = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y32ww"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("6_qfq2n")
metallic_specular = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xmxnx"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("6_qfq2n")
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="2"]
size = Vector2(100, 100)

[node name="Board" type="Node3D"]
script = ExtResource("1")

[node name="Player1" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.75)

[node name="Player2" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.25, 0)

[node name="Player3" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.75)

[node name="Player4" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.25, 0)

[node name="Controller" parent="." instance=ExtResource("3")]
COOKIES_FOR_CAKE = 20
start_node = NodePath("../Nodes/Node1")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.642788, 0.627507, -0.439385, 0, 0.573576, 0.819152, 0.766044, -0.526541, 0.368688, -6, 4, 3)
light_energy = 0.75
shadow_enabled = true

[node name="Nodes" type="Node3D" parent="."]

[node name="Node1" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0137796, -0.0109558, 0.0186167)
next = Array[NodePath]([NodePath("../Node2")])
prev = Array[NodePath]([NodePath("../Node25")])
amount_of_items_sold = 4

[node name="Node2" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
type = 1
next = Array[NodePath]([NodePath("../Node3")])
prev = Array[NodePath]([NodePath("../Node1")])
amount_of_items_sold = 4

[node name="Node3" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)
next = Array[NodePath]([NodePath("../Node4")])
prev = Array[NodePath]([NodePath("../Node2")])
amount_of_items_sold = 4

[node name="Node4" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 3)
type = 3
next = Array[NodePath]([NodePath("../Node5")])
prev = Array[NodePath]([NodePath("../Node3")])
amount_of_items_sold = 4

[node name="Node5" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09936, 0, 0)
next = Array[NodePath]([NodePath("../Node6")])
prev = Array[NodePath]([NodePath("../Node4")])
amount_of_items_sold = 4

[node name="Node6" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.0758, 0.0101128, -0.0186749)
type = 2
next = Array[NodePath]([NodePath("../Node7")])
prev = Array[NodePath]([NodePath("../Node5")])
amount_of_items_sold = 4

[node name="Node7" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0994, 0, 0)
next = Array[NodePath]([NodePath("../Node8")])
prev = Array[NodePath]([NodePath("../Node6")])
amount_of_items_sold = 4

[node name="Node8" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.0994, 0, 0)
type = 4
next = Array[NodePath]([NodePath("../Node9")])
prev = Array[NodePath]([NodePath("../Node7")])

[node name="Node9" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0994, 0, -2)
next = Array[NodePath]([NodePath("../Node10")])
prev = Array[NodePath]([NodePath("../Node8")])
amount_of_items_sold = 4

[node name="Node10" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.0994, 0, -4)
type = 1
next = Array[NodePath]([NodePath("../Node11"), NodePath("../Node31")])
prev = Array[NodePath]([NodePath("../Node9")])
amount_of_items_sold = 4

[node name="Node11" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0994, 0, -0.209747)
next = Array[NodePath]([NodePath("../Node12")])
prev = Array[NodePath]([NodePath("../Node10")])
amount_of_items_sold = 4

[node name="Node12" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0994, 0, 4.26378)
type = 1
next = Array[NodePath]([NodePath("../Node13")])
prev = Array[NodePath]([NodePath("../Node11")])
amount_of_items_sold = 4

[node name="Node13" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.2557, 0, 7.98859)
type = 3
next = Array[NodePath]([NodePath("../Node14")])
prev = Array[NodePath]([NodePath("../Node12"), NodePath("../Node34")])
amount_of_items_sold = 4

[node name="Node14" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.9715, 0, 9.98185)
next = Array[NodePath]([NodePath("../Node15")])
prev = Array[NodePath]([NodePath("../Node13")])
amount_of_items_sold = 4

[node name="Node15" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0994, 0, 8)
type = 2
next = Array[NodePath]([NodePath("../Node16")])
prev = Array[NodePath]([NodePath("../Node14")])
amount_of_items_sold = 4

[node name="Node16" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.0994, 0, 8)
type = 6
next = Array[NodePath]([NodePath("../Node17")])
prev = Array[NodePath]([NodePath("../Node15")])
amount_of_items_sold = 4

[node name="Node17" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0994, 0, 10)
type = 1
next = Array[NodePath]([NodePath("../Node18")])
prev = Array[NodePath]([NodePath("../Node16")])
amount_of_items_sold = 4

[node name="Node18" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.824274, 0, -0.56619, 0, 1, 0, 0.56619, 0, 0.824274, 7.0994, 0, 10)
potential_cake = true
next = Array[NodePath]([NodePath("../Node19")])
prev = Array[NodePath]([NodePath("../Node17")])
amount_of_items_sold = 4

[node name="Node19" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.876239, 0, -0.481876, 0, 1, 0, 0.481876, 0, 0.876239, 4.0994, 0, 10)
type = 2
next = Array[NodePath]([NodePath("../Node20")])
prev = Array[NodePath]([NodePath("../Node18")])
amount_of_items_sold = 4

[node name="Node20" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.855969, 0, -0.517026, 0, 1, 0, 0.517026, 0, 0.855969, 1.0994, 0, 10)
next = Array[NodePath]([NodePath("../Node21")])
prev = Array[NodePath]([NodePath("../Node19")])
amount_of_items_sold = 4

[node name="Node21" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.869055, 0, -0.494716, 0, 1, 0, 0.494716, 0, 0.869055, -1.9006, 0, 10)
type = 1
next = Array[NodePath]([NodePath("../Node22")])
prev = Array[NodePath]([NodePath("../Node20")])
amount_of_items_sold = 4

[node name="Node22" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9006, 0, 7)
next = Array[NodePath]([NodePath("../Node23")])
prev = Array[NodePath]([NodePath("../Node21")])
amount_of_items_sold = 4

[node name="Node23" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.999882, -0.0153777, 0, 0.0153777, 0.999882, 0, 0, 0, 1, -3.9006, 0, 3)
type = 1
next = Array[NodePath]([NodePath("../Node24")])
prev = Array[NodePath]([NodePath("../Node22")])
amount_of_items_sold = 4

[node name="Node24" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9006, 0, -0.363348)
next = Array[NodePath]([NodePath("../Node25")])
prev = Array[NodePath]([NodePath("../Node23")])
amount_of_items_sold = 4

[node name="Node25" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.18215, 0, -2.49445)
type = 2
next = Array[NodePath]([NodePath("../Node1")])
prev = Array[NodePath]([NodePath("../Node24")])
amount_of_items_sold = 4

[node name="Node26" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76597, 4.76837e-07, -10.4927)
type = 2
next = Array[NodePath]([NodePath("../Node27")])
prev = Array[NodePath]([NodePath("../Node30")])
amount_of_items_sold = 4

[node name="Node27" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.870759, 0, -0.491709, 0, 1, 0, 0.491709, 0, 0.870759, 10.347, 0, -10.5825)
type = 2
next = Array[NodePath]([NodePath("../Node28")])
prev = Array[NodePath]([NodePath("../Node26")])
amount_of_items_sold = 4

[node name="Node28" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.9829, 0, -0.18414, 0, 1, 0, 0.18414, 0, 0.9829, 14.5701, 0, -11.7753)
next = Array[NodePath]([NodePath("../Node29")])
prev = Array[NodePath]([NodePath("../Node27")])
amount_of_items_sold = 4

[node name="Node29" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2964, 0, -14.9524)
type = 2
next = Array[NodePath]([NodePath("../Node36")])
prev = Array[NodePath]([NodePath("../Node28")])
amount_of_items_sold = 4

[node name="Node30" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.78371, 0, -15.0823)
type = 1
next = Array[NodePath]([NodePath("../Node26")])
prev = Array[NodePath]([NodePath("../Node40")])
amount_of_items_sold = 4

[node name="Node31" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.3011, 0, -5.93074)
type = 2
next = Array[NodePath]([NodePath("../Node35")])
prev = Array[NodePath]([NodePath("../Node10")])
amount_of_items_sold = 4

[node name="Node32" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.0427, 0, -3.00452)
type = 3
next = Array[NodePath]([NodePath("../Node33")])
prev = Array[NodePath]([NodePath("../Node35")])
amount_of_items_sold = 4

[node name="Node33" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.9324, 0, 1.40589)
potential_cake = true
next = Array[NodePath]([NodePath("../Node34")])
prev = Array[NodePath]([NodePath("../Node32")])
amount_of_items_sold = 4

[node name="Node34" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.5561, 0, 6.43954)
next = Array[NodePath]([NodePath("../Node13")])
prev = Array[NodePath]([NodePath("../Node33")])
amount_of_items_sold = 4

[node name="Node35" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.864871, 0, -0.501994, 0, 1, 0, 0.501994, 0, 0.864871, 27.8165, 0, -6.06359)
next = Array[NodePath]([NodePath("../Node32")])
prev = Array[NodePath]([NodePath("../Node31")])
amount_of_items_sold = 4

[node name="Node36" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2181, 0, -19.9082)
type = 6
next = Array[NodePath]([NodePath("../Node37")])
prev = Array[NodePath]([NodePath("../Node29")])
amount_of_items_sold = 4

[node name="Node37" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.7717, 0, -25.8281)
next = Array[NodePath]([NodePath("../Node38")])
prev = Array[NodePath]([NodePath("../Node36")])
amount_of_items_sold = 4

[node name="Node38" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9797, 0, -28.7061)
type = 1
next = Array[NodePath]([NodePath("../Node39")])
prev = Array[NodePath]([NodePath("../Node37")])
amount_of_items_sold = 4

[node name="Node39" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46914, 0, -25.1057)
potential_cake = true
next = Array[NodePath]([NodePath("../Node40")])
prev = Array[NodePath]([NodePath("../Node38")])
amount_of_items_sold = 4

[node name="Node40" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29244, 0, -20.0554)
next = Array[NodePath]([NodePath("../Node30")])
prev = Array[NodePath]([NodePath(""), NodePath("../Node39")])
amount_of_items_sold = 4

[node name="Node41" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.10939, 0, 20.0415)
type = 2
next = Array[NodePath]([NodePath("../Node42")])
prev = Array[NodePath]([NodePath("../Node50")])
amount_of_items_sold = 4

[node name="Node42" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 22.8807)
next = Array[NodePath]([NodePath("../Node43")])
prev = Array[NodePath]([NodePath("../Node41")])
amount_of_items_sold = 4

[node name="Node43" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 27.5495)
next = Array[NodePath]([NodePath("../Node44")])
prev = Array[NodePath]([NodePath("../Node42")])
amount_of_items_sold = 4

[node name="Node44" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.77932, 0, 31.9889)
type = 1
next = Array[NodePath]([NodePath("../Node45")])
prev = Array[NodePath]([NodePath("../Node43")])
amount_of_items_sold = 4

[node name="Node45" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.37058, 0, 35.0633)
potential_cake = true
next = Array[NodePath]([NodePath("../Node46")])
prev = Array[NodePath]([NodePath("../Node44")])
amount_of_items_sold = 4

[node name="Node46" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8528, 0, 34.9371)
next = Array[NodePath]([NodePath("../Node47")])
prev = Array[NodePath]([NodePath("../Node45")])
amount_of_items_sold = 4

[node name="Node47" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.2767, 0, 32.8501)
type = 1
next = Array[NodePath]([NodePath("../Node48")])
prev = Array[NodePath]([NodePath("../Node46")])
amount_of_items_sold = 4

[node name="Node48" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.999912, 0, 0.0132474, 0, 1, 0, -0.0132474, 0, 0.999912, 19.2568, 0, 28.4806)
next = Array[NodePath]([NodePath("../Node49")])
prev = Array[NodePath]([NodePath("../Node47")])
amount_of_items_sold = 4

[node name="Node49" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.883201, 0, -0.468994, 0, 1, 0, 0.468994, 0, 0.883201, 18.0498, 0, 22.9917)
next = Array[NodePath]([NodePath("../Node50")])
prev = Array[NodePath]([NodePath("../Node48")])
amount_of_items_sold = 4

[node name="Node50" parent="Nodes" instance=ExtResource("4")]
transform = Transform3D(0.919094, 0, -0.394038, 0, 1, 0, 0.394038, 0, 0.919094, 14.0554, 0, 18.1241)
type = 2
next = Array[NodePath]([NodePath("../Node41")])
prev = Array[NodePath]([NodePath("../Node49")])
amount_of_items_sold = 4

[node name="Landscape" type="Node3D" parent="."]

[node name="Bridge1" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(0.752206, 0, -0.658929, 0, 1, 0, 0.658929, 0, 0.752206, 1.22172, 0.208714, -6.42729)
mesh = ExtResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_hjf3u")

[node name="Bridge2" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(0.994198, 0, -0.107569, 0, 1, 0, 0.107569, 0, 0.994198, 9.77071, 0.285242, -5.19669)
mesh = ExtResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_y32ww")

[node name="Bridge3" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(0.824395, 0, 0.566015, 0, 1, 0, -0.566015, 0, 0.824395, 21.2775, 0.208714, -10.4172)
mesh = ExtResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_xmxnx")

[node name="Water" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, -0.25, -5)
mesh = SubResource("2")
surface_material_override/0 = ExtResource("7")

[node name="Island1" parent="Landscape" instance=ExtResource("8")]
transform = Transform3D(-1.5, 0, -4.88762e-07, 0, 1.5, 0, 4.88762e-07, 0, -1.5, 9.87409, -0.25, -18.8832)

[node name="Bridge4" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12572, 0.208714, 14.9763)
mesh = ExtResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_xmxnx")

[node name="Bridge5" type="MeshInstance3D" parent="Landscape"]
transform = Transform3D(0.981921, 0, -0.189293, 0, 1, 0, 0.189293, 0, 0.981921, 15.1569, 0.25, 12.9853)
mesh = ExtResource("5")
surface_material_override/0 = SubResource("StandardMaterial3D_xmxnx")

[node name="Island3" parent="Landscape" instance=ExtResource("8")]
transform = Transform3D(-2.44381e-07, 0, -1.5, 0, 1.5, 0, 1.5, 0, -2.44381e-07, 9.8741, -0.25, 26.5222)

[node name="Island2" parent="Landscape" instance=ExtResource("9")]
transform = Transform3D(1.75, 0, 0, 0, 1.75, 0, 0, 0, 1.75, 3.39241, -0.463469, 1.35096)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10")
autoplay = true

[connection signal="trigger_event" from="Controller" to="." method="handle_event"]
